--- a/.gitignore
+++ b/.gitignore
@@ -1387,3 +1387,4 @@ testing/9/2020-05-09/23:24:55_lr-0.01_b1-0.99_ep-0.01_d-1e-08_tvw-1000_sw-1_cw-1
 flutter-bloc-1-2eb17-firebase-adminsdk-mhniq-a589c3de7a.json
 downloaded/images/UPjcLOcMuKfLHeeEeJhF5IVHvCP2/cncx/content.jpg
 test.json
+.vscode/settings.json
