create main file

--- a/.gitignore
+++ b/.gitignore
@@ -1388,3 +1388,7 @@ flutter-bloc-1-2eb17-firebase-adminsdk-mhniq-a589c3de7a.json
 downloaded/images/UPjcLOcMuKfLHeeEeJhF5IVHvCP2/cncx/content.jpg
 test.json
 .vscode/settings.json
+serviceAccount.json
+__pycache__/downloader.cpython-37.pyc
+__pycache__/test.cpython-37.pyc
+processDict.json
