--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ __pycache__/test.cpython-37.pyc
 processDict.json
 serviceAccount.json
 test.json
+.ipynb_checkpoints/filter-checkpoint.ipynb
+.ipynb_checkpoints/test1-checkpoint.ipynb
+test1.ipynb
+Untitled.ipynb
+filter.ipynb
+style.py
